--- a/docs/zahtjevi.tex
+++ b/docs/zahtjevi.tex
@@ -15,12 +15,12 @@ Funkcionalni zahtjevi služe identifikaciji glavnih funkcija sustava i omogućuj
 aplikacije.
 
 \subsection{Korisnički zahtjevi}
-\subsubsection{Omogućen odabir detektiranja objekata} 
+\subsubsection{Omogućen odabir načina detektiranja objekata} 
 Unutar aplikacije moguće je odabrati između statičkog i dinamičkog detektiranja
 objekata. Pojam dinamičkog detektiranja odnosi se na detekciju u stvarnom vremenu. Statičko detektiranje mora moći podržavati odabir fotografije iz galerije, ali i snimanje nove fotografije nad kojom se 
 izvodi detektiranje. Za detekciju u stvarnom vremenu otvara se kamera čime počinje postupak detektiranja. 
 
-\subsubsection{Prikaz rezultata korisniku na zaslonu}
+\subsubsection{Prikaz rezultata na zaslonu}
 Aplikacija mora moći prikazati podatke dobivene iz ulazne slike ili videozapisa korisniku. Rezultat mora biti prikazan 
 kao okvir oko detektiranog objekta, te ime razreda kojem objekt pripada.
 
