--- a/docs/Pojmovi.tex
+++ b/docs/Pojmovi.tex
@@ -1,10 +1,9 @@
-\chapter{Objašnjenja korištenih pojmova}
+\chapter{mAP vrijednost}
 
-Prije opisa postojećih metoda detekcije objekata potrebno je objasniti često korištene pojmove prilikom detektiranja objekata 
+Prije opisa postojećih metoda detekcije objekata potrebno je objasniti mAP vrijednost \engl{Mean Average Precission}, jer se ona često koristi prilikom evaluacije
+kvalitete treniranih modela.
 
-\section{mAP vrijednost}
-
-Ova vrijednost predstavlja srednju vrijednost srednjih preciznosti svih razreda nad svim \newline 
+Ova vrijednost predstavlja srednju vrijednost srednjih preciznosti svih razreda nad svim
 vrijednostima IoU iz skupa podataka i koristi se prilikom evaluiranja točnosti treniranog modela. 
 Kako bi se mogla objasniti vrijednost i značenje mAPa prilikom validacije nekog modela, prvo se moraju objasniti pojmovi
 preciznosti \engl{precission} i opoziva \engl{recall}. Preciznost je omjer uspješno klasificiranih objekata i svih klasificiranih objekata na slici. 
