--- a/docs/Metode.tex
+++ b/docs/Metode.tex
@@ -32,7 +32,6 @@ ponavlja gore navedeni postupak.\citep{DBLP:journals/corr/GirshickDDM13} \newlin
 R-CNN, iako je bio veliki uspjeh, imao je svojih nedostataka.
 Tako su u radu \cite{DBLP:journals/corr/Girshick15} navedeni nedostaci R-CNN-a : 
 \begin{description}
-    \item [Treniranje se odvija u više faza:]
     \item [Velike vremenske i prostorne složenosti:]treniranje na velikom broju regija
     \item [Detekcija objekata je spora:]detektiranje objekata je složeno zbog broja regija
 \end{description}
@@ -162,45 +161,35 @@ detektirati 9000 vrsta objekata u stvarnom vremenu. \citep{DBLP:journals/corr/Re
 
 \section{SSD}
 SSD ili "Single Shot Detector" nastoji dodatno smanjiti kašnjenja i povećati preciznost prilikom detektiranja. 
-Ovaj model koristi VGG16 kako bi ekstrahirao značajke sa slike. VGG16 predstavlja konvolucijsku neuronsku mrežu. 
-Značajke slike šalju idućem sloju koji započinje postupak detektiranja. Prvi sloj u postupku detektiranja objekata
-na slici služi ekstrahiranju značajki s manjih objekata na slici i dimenzija je 38x38. Broj 38x38 predstavlja broj kvadrata na koje je slika 
-podijeljena. Ovaj sloj uzima informacije kao što su rubovi i boje. Informacije iz ovog sloja ne daju dovoljno informacija za klasifikaciju. Dimenzije naknadnih slojeva 
-sve su manje (na primjer 8x8 i 4x4) i one služe detektiranju većih objekata na slici. 
-Svaki kvadrat generira četiri pretpostavke. Svaka pretpostavke sastoji se od okvira oko pretpostavljenog objekta 
-i (C + 1)  vjerojatnosti pojavljivanja razreda unutar okvira, a C je broj razreda u razrednom skupu. Broj 1 predstavlja oznaku
-kada ne postoji objekt unutar generiranog okvira. Razred s najvećom vjerojatnošću uzima se kao pretpostavljeni razred 
-za taj okvir. Na slici \ref{SSD okvir} je prikazan primjer generiranja okvira. Slika je preuzeta s \footnote{\url{https://cutt.ly/0yB2Odq}}
+Ovaj model koristi VGG16 kako bi ekstrahirao značajke iz ulazne slike. VGG16 predstavlja unaprijed treniranu konvolucijsku neuronsku mrežu koja služi za postavljanje 
+parametara modela. 
+Prvi sloj nakon VGG16 mreže služi za detekciju manjih objekata na slici i dimenzija je 38x38. Ova dimenzija predstavlja broj kvadrata na koje model dijeli sliku. 
+Dimenzije naknadnih slojeva sve su manje (na primjer 8x8 i 4x4) i one služe detektiranju većih objekata na slici. 
+Svaki kvadrat generira četiri pretpostavke za mogući objekt. Svaka pretpostavka sastoji se od okvira oko objekta 
+i C + 1 vjerojatnosti pojavljivanja razreda unutar okvira, a C je broj razreda u razrednom skupu. Broj 1 predstavlja dodatan razred
+kada ne postoji objekt unutar generiranog okvira i označen je brojem 0. Razred s najvećom vjerojatnošću uzima se kao pretpostavljeni razred 
+za taj okvir. Na slici \ref{SSD okvir} prikazan je primjer generiranja okvira. Slika je preuzeta s \footnote{\url{https://cutt.ly/0yB2Odq}}
 
 
 \begin{figure}[htb]
     \centering
     \includegraphics[width=10cm]{img/SSD-okviri.png}
-    \caption{Lijevo na slici nalazi se originalna fotografija. Na desnoj slici vidi se generiranje okvira oko pretpostavljenog objekta za kvadrat koji se 
-    nalazi u 5 retku i 4 stupcu 8x8 mreže. Treba napomenuti da se ovaj postupak izvodi u prvom sloju koji je dimenzija 38x38, a da je zbog jednostavnosti 
-    ova mreža prikazana kao 8x8. U slojevima s manjim dimenzijama se generira 6 pretpostavki}
+    \caption{Lijevo na slici nalazi se originalna fotografija. Na desnoj slici vidi se generiranje četiri okvira oko pretpostavljenog objekta za kvadrat koji se 
+    nalazi u 5 retku i 4 stupcu 8x8 mreže. Treba napomenuti da se ovaj postupak izvodi u prvom sloju koji je dimenzija 38x38, a da je zbog jednostavnijeg prikaza 
+    taj sloj na slici prikazan kao kvadratna mreža dimenzija 8x8. U slojevima s manjim dimenzijama (8x8 ili 4x4) generira se šest pretpostavki}
     \label{SSD okvir}
 \end{figure}
 
-Uz generirane okvire, svaki kvadrat generira i unaprijed definirane okvire. Ovi okviri su ručno izrađeni na temelju širokog spektra objekata iz stvarnog svijeta.
-U početnim slojevima s većim dimenzijama generiraju se četiri takva okvira, a u kasnijim šest. Generiranje ovih okvira smanjuje količinu računanja na početku treniranja. 
+Uz generirane okvire, svaki kvadrat generira i unaprijed definirane okvire. Ovi okviri ručno su definirani kako bi mogli pokriti širok spektar objekata iz stvarnog svijeta.
+U početnim slojevima s većim dimenzijama generiraju se četiri takva okvira, a u slojevima s manjim dimenzijama šest, isto kao što vrijedi za generiranje pretpostavki.
+Generiranje ovih okvira smanjuje količinu računanja na početku treniranja.
 Unaprijed definirani okviri koji imaju IoU s okvirom temeljne istine većim od 0.5 označuju se kao pozitivni, dok oni koji imaju IoU manji od te vrijednosti se označuju kao negativni.
-Pozivitno označeni unaprijed definirani okviri se kombiniraju s generiranim okvirima oko pretpostavljenog objekta tako da se računa odstupanje koordinata generiranih okvira od pozitivno
-označenih. Generirani okviri koji imaju najmanje otsupanje, tj. koji najbolje odgovaraju obliku objekta koji detektiraju, uzimaju se. Ostali okviri se odbacuju. 
-
-
-
-
-
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=10cm]{img/SSD.png}
-    \caption{Prva slika označava ulaz s okvirima temeljne istine \engl{ground truth}. Druga slika označava mapu značajki koja je 8x8. Treća slika označava mapu značajki koja je 4x4. Slika preuzeta iz \citep{DBLP:journals/corr/LiuAESR15}}
-    \label{SSD model}
-\end{figure}
-
-Na slici ~\ref{SSD model} moguće je vidjeti kako SSD generira okvire oko objekata. Za treniranje ovog modela potrebno je unijeti sliku
-te okvire temeljne istine kako bi model raspoznao objekte od pozadine. Model sadrži unaprijed definirane okvire različitih veličina pomoću kojih 
-se dolazi do mape značajki. Dimenzije mape značajki označavaju koliko točaka od unaprijed definiranih okvira se poklapa ili nalazi unutar danih okvira temeljne istine.
-Na primjer, ako se izvede mapa značajki 8x8, to znači da su dva unaprijed definirana okvira unutar okvira temeljne istine jer svaki ima četiri točke. \citep{DBLP:journals/corr/LiuAESR15}
-
+Lokalizacijski gubitak računa se kao suma smooth L1 vrijednosti odstupanja pretpostavljenih okvira od okvira temeljne istine za sve pozitivno označene unaprijed definirane okvire nad svim razredima. 
+Smooth L1 funkcija definira se kao 
+\[
+    smoothL1(x) = \left\{\begin{array}{lr}
+        0.5x^2, & \text{ako } |x| <  1\\
+        |x|- 0.5, & \text{inače } \\
+        \end{array}\right\}
+\]
+i objašnjenje zašto se koristi nije u sklopu ovog rada. \citep{DBLP:journals/corr/LiuAESR15}
