--- a/docs/Uvod.tex
+++ b/docs/Uvod.tex
@@ -13,9 +13,10 @@ bi takav razvoj trajao. Tadašnji vrsni znanstvenici i profesori smatrali su da 
 \section{Detekcija objekata}
 Detekcija objekata podgrana je računalnog vida te označava postupak kojim računalo nastoji odrediti razred
 i položaj objekta na slici. Razred ili klasa \engl{Class} označava vrstu kojoj objekt na slici pripada. Razredi mogu biti generalizirani ili specijalizirani. 
-Na primjer, "pas" može biti označen kao jedan razred, ali isto tako može biti i "bulldog", "pekinezer", "bigl" itd.
-Ovakav postupak zapravo objedinjuje postupak klasifikacije objekata i lokalizacije objekata.
-Složenost ovog postupka nalazi se u samoj činjenici da je za određivanje razreda kojem objekt pripada potrebna golema količina podataka 
+Na primjer, "pas" može biti jedan razred, ali isto tako može biti i "bulldog", "pekinezer", "bigl" itd.
+Ovakav postupak zapravo objedinjuje postupak klasifikacije objekata i lokalizacije objekata. 
+Klasifikacija je postupak određivanja razreda, a lokalizacija je postupak određivanja pozicije objekta.
+Složenost ovog postupka nalazi se u činjenici da je za određivanje razreda kojem objekt pripada potrebna golema količina podataka 
 iz stvarnoga svijeta. Detekcija objekata može se odvijati u stvarnome vremenu \engl {real-time}  ili naknadnom analizom na slici.
 
 
